# Discord_bot

./: .gitignore  Cargo.toml
src/: gateway.rs  https.rs  main.rs
src/gateway/: discord.rs  https.rs  mod.rs  payloads.rs  temp.rs  voice.rs  youtube.rs
