[package]
name = "discord_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ["multipart", "json", "blocking"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.15.1"
tokio = {version = "1.48.0" , features = ["full"] }
tokio-sync = "0.1.8"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
